--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
             <div class="links">
                 <a href="https://www.linkedin.com/in/anish-karn-5009raw/"><i class="fa fa-linkedin"></i></a>
-                <a href="anish.karn2008@gmail.com"><i class="fa fa-envelope"></i></a>
+                <a href="mailto: anish.karn2008@gmail.com"><i class="fa fa-envelope"></i></a>
                 <a href="https://github.com/Anish200308"><i class="fa fa-github"></i></a>
             </div>
         </nav>
