--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
     <!-- Include the external JavaScript file -->
     <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
     <script src="script.js"></script>
+    footer>
+        <div class="text">
+            <p>Copyright @ 2024 by Aman Raj Singh</p>
+        </div>
+       <a href="#"> <i class='bx bx-up-arrow-alt'></i></a>
+    </footer>
 </body>
 
 </html>
