--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <script src="script.js"></script>
     footer>
         <div class="text">
-            <p>Copyright @ 2024 by Aman Raj Singh</p>
+            <p>Copyright @ 2024 by Anish Kumar Karn</p>
         </div>
        <a href="#"> <i class='bx bx-up-arrow-alt'></i></a>
     </footer>
