--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="btns rdm"><button> Read More</button></div>
             </div>
             <div class="about-img">
-                <img src="profile-pic.png" alt="Profile Pic">
+                <img src="Anish1.png" alt="Profile Pic">
             </div>
         </section>
 
